# snn-quantization-performance-impact

./: .gitignore  Kwantyzacja.pptx  README.md  check_models_size.py  main.py  notatki.txt  pyproject.toml  sprawozdanie.docx  train_models.py  ~$Kwantyzacja.pptx
data/: CifarData.py  DigitsData.py  RegressionData.py  WineData.py
models/: CNN.py  MLPbig.py  MLPsmall.py  Regressor.py
saved_models/: CIFAR-10_CNN_ptq_dynamic_i8.pth  CIFAR-10_CNN_ptq_static_i8.pth  CIFAR-10_CNN_qat_int8.pth  CIFAR-10_CNN_quantized_qint8.pth  Digits_MLP_(Big)_baseline_fp32.pth  Digits_MLP_(Big)_original_fp32.pth  Digits_MLP_(Big)_ptq_dynamic_i8.pth  Digits_MLP_(Big)_ptq_f16.pth  Digits_MLP_(Big)_ptq_static_i8.pth  Digits_MLP_(Big)_qat_int8.pth  Digits_MLP_(Big)_quantized_float16.pth  Digits_MLP_(Big)_quantized_qint8.pth  MLPsmall.pth  Trigonometric_Regressor_baseline_fp32.pth  Trigonometric_Regressor_original_fp32.pth  Trigonometric_Regressor_ptq_dynamic_i8.pth  Trigonometric_Regressor_ptq_f16.pth  Trigonometric_Regressor_ptq_static_i8.pth  Trigonometric_Regressor_qat_int8.pth  Trigonometric_Regressor_quantized_float16.pth  Trigonometric_Regressor_quantized_qint8.pth  Wine MLP (Small)_quantized.pth  Wine_MLP_(Small)_baseline_fp32.pth  Wine_MLP_(Small)_original_fp32.pth  Wine_MLP_(Small)_ptq_dynamic_i8.pth  Wine_MLP_(Small)_ptq_f16.pth  Wine_MLP_(Small)_ptq_static_i8.pth  Wine_MLP_(Small)_qat_int8.pth  Wine_MLP_(Small)_quantized_float16.pth  Wine_MLP_(Small)_quantized_qint8.pth  digits_mlp.pth  trig_regressor.pth  wine_mlp.pth
saved_models_old/: MLPbig.pth  Wine MLP (Small).pth
